[package]
name = "unix-1972-tapes"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2024"
description = "Parser for the Unix s1 and s2 tapes from 1972"
license = "BSD-3-Clause"
keywords = ["unix", "retrocomputing"]
categories = ["encoding"]

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
jiff = { version = "0.2.14", default-features = false, features = ["perf-inline"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
tar = "0.4.44"
